ingress/ingress-plc.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: plc
  namespace: deviceshifu
  labels:
    name: plc
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: deviceshifu-strip-api-prefix@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: "/api"
        backend:
          service:
            name: deviceshifu-siemenss7-service
            port:
              number: 80
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: strip-api-prefix
  namespace: deviceshifu
spec:
  stripPrefix:
    prefixes:
      - "/api"
